<resources>
    <string name="app_name">ExamHalperBTQM</string>
    <string name="login">Login</string>
    <string name="exam_helper">Exam Helper</string>
    <string name="btqm">BTQM</string>
    <string name="or">or</string>
    <string name="register">Create Account</string>
    <string name="forget_pass">Forget password?</string>
    <string name="click_here">Click here.</string>
    <string name="login_to">Login To</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="teachers_room">Teacher\'s room</string>
    <string name="admin_panel">Admin panel</string>
    <string name="change_password">Change password</string>
    <string name="add_member">Add member</string>
    <string name="notice">Notice</string>
    <string name="exam_routine">Exam routine</string>
    <string name="log_out">Log out</string>
    <string name="hint_current_password">Current password</string>
    <string name="hint_new_password">New password</string>
    <string name="hint_confirm_new_password">Confirm new password</string>
    <string name="required_only_for_teachers">This is required only for the teachers of BTQM</string>
    <string name="hint_branch">Branch</string>
    <string name="hint_class">Class</string>
    <string name="hint_section">Section</string>
    <string name="hint_mobile_no">Mobile no.</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="already_have_account">Already have account?</string>
    <string name="login_here">Login here.</string>

</resources>