<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_35"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_90"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".90" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/app_theme_gradient"
        app:layout_constraintBottom_toTopOf="@id/gl_50"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_30sdp"
        app:layout_constraintBottom_toTopOf="@id/gl_90"
        app:layout_constraintTop_toBottomOf="@id/gl_35">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_15sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/institution_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btqm"
                android:textColor="@color/blue"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exam_helper"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintStart_toStartOf="@id/institution_name"
                app:layout_constraintTop_toBottomOf="@id/institution_name" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:background="@drawable/button_background"
                android:elevation="@dimen/_50sdp"
                android:text="@string/login"
                android:onClick="getLogin"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintTop_toBottomOf="@id/app_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/or"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintEnd_toEndOf="@id/login_button"
                app:layout_constraintStart_toStartOf="@id/login_button"
                app:layout_constraintTop_toBottomOf="@id/login_button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/button_background"
                android:elevation="@dimen/_50sdp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintTop_toBottomOf="@id/or" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/register_button"
                app:layout_constraintStart_toStartOf="@id/register_button"
                app:layout_constraintEnd_toEndOf="@id/register_button"
                android:layout_marginTop="@dimen/_20sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_forget_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_pass"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:padding="@dimen/_2sdp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_click_here"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click_here"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:padding="@dimen/_2sdp"
                    android:layout_toEndOf="@id/tv_forget_pass"/>

            </RelativeLayout>





        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>