<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_theme_gradient"
    android:paddingBottom="@dimen/_15sdp"
    tools:context=".RegisterActivity">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/required_only_for_teachers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_15sdp"
        android:text="@string/required_only_for_teachers"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_create_account"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_account" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:scrollbars="none"
        android:paddingBottom="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/required_only_for_teachers">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiet_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/hint_name"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="@dimen/_2sdp"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/_10sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiet_branch"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/hint_branch"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="@dimen/_2sdp"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="@id/tiet_name"
                app:layout_constraintStart_toStartOf="@id/tiet_name"
                app:layout_constraintTop_toBottomOf="@id/tiet_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_branch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/_10sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiet_class"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/hint_class"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="@dimen/_2sdp"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="@id/tiet_name"
                app:layout_constraintStart_toStartOf="@id/tiet_name"
                app:layout_constraintTop_toBottomOf="@id/tiet_branch">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_class"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/_10sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiet_section"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/hint_section"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="@dimen/_2sdp"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="@id/tiet_name"
                app:layout_constraintStart_toStartOf="@id/tiet_name"
                app:layout_constraintTop_toBottomOf="@id/tiet_class">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_section"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/_10sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiet_mobile"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/hint_mobile_no"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="@dimen/_2sdp"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="@id/tiet_name"
                app:layout_constraintStart_toStartOf="@id/tiet_name"
                app:layout_constraintTop_toBottomOf="@id/tiet_section">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/_10sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiet_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/hint_password"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="@dimen/_2sdp"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="@id/tiet_name"
                app:layout_constraintStart_toStartOf="@id/tiet_name"
                app:layout_constraintTop_toBottomOf="@id/tiet_mobile"
                app:passwordToggleDrawable="@drawable/password_visibility_selector"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/_10sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiet_confirm_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/hint_confirm_password"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="@dimen/_2sdp"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="@id/tiet_name"
                app:layout_constraintStart_toStartOf="@id/tiet_name"
                app:layout_constraintTop_toBottomOf="@id/tiet_password"
                app:passwordToggleDrawable="@drawable/password_visibility_selector"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/_10sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/button_background"
                android:elevation="@dimen/_50sdp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintTop_toBottomOf="@id/tiet_confirm_password" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/register_button"
                app:layout_constraintStart_toStartOf="@id/register_button"
                app:layout_constraintEnd_toEndOf="@id/register_button">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_account"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="normal"
                    android:textColor="@color/blue"
                    android:id="@+id/already_have_account"
                    android:padding="@dimen/_3sdp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_here"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold"
                    android:textColor="@color/blue"
                    android:id="@+id/login_here"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/sky_bg_text_after_press"
                    android:layout_toEndOf="@id/already_have_account"
                    android:padding="@dimen/_3sdp"/>




            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>