<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_15sdp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/change_password_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textColor="@color/blue"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiet_current_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        app:passwordToggleDrawable="@drawable/password_visibility_selector"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="@dimen/_5sdp"
        app:passwordToggleTint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/change_password_headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_current_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_current_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/_10sdp" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiet_new_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        app:passwordToggleDrawable="@drawable/password_visibility_selector"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tiet_current_password"
        app:layout_constraintStart_toStartOf="@id/tiet_current_password"
        app:layout_constraintEnd_toEndOf="@id/tiet_current_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_new_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/_10sdp" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiet_confirm_new_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        app:passwordToggleDrawable="@drawable/password_visibility_selector"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tiet_new_password"
        app:layout_constraintStart_toStartOf="@id/tiet_new_password"
        app:layout_constraintEnd_toEndOf="@id/tiet_new_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_new_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_confirm_new_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/_10sdp" />


    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/change_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/button_background"
        android:elevation="@dimen/_50sdp"
        android:text="@string/change_password"
        android:onClick="getLogin"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintTop_toBottomOf="@id/tiet_confirm_new_password" />

</androidx.constraintlayout.widget.ConstraintLayout>